--- a/app/views/data/edit.html.erb
+++ b/app/views/data/edit.html.erb
@@ -5,14 +5,17 @@
 
       <%= form_for(@datum, { :multipart => true }) do |f| %>
         <% if @datum.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@datum.errors.count, "error") %> prohibited this datum from being saved:</h2>
-      
-            <ul>
-            <% @datum.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              <h3 class="panel-title"><%= pluralize(@datum.errors.count, "error") %> prohibited this datum from being saved:</h3>
+            </div>
+            <div class="panel-body">
+              <ul>
+              <% @datum.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
           </div>
         <% end %>
       
