--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -4,15 +4,18 @@
       <h1>Editing Visualization</h1>
       
       <%= form_for(@visualization) do |f| %>
-        <% if @visualization.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@visualization.errors.count, "error") %> prohibited this visualization from being saved:</h2>
-
-            <ul>
-            <% @visualization.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
+        <% if @datum.errors.any? %>
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              <h3 class="panel-title"><%= pluralize(@datum.errors.count, "error") %> prohibited this datum from being saved:</h3>
+            </div>
+            <div class="panel-body">
+              <ul>
+              <% @datum.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+              </ul>
+            </div>
           </div>
         <% end %>
 
