--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -266,7 +266,6 @@
   </div>
 
   <script>
-
     $(document).ready(function() {
       $("#iframe-content").text('<iframe src="<%= standalone_visualization_url(@visualization) %>" frameborder="0" height="100%" width="100%"></iframe>');
 
@@ -275,7 +274,7 @@
       if(getParameterByName('width'))
         $("body").width(getParameterByName('width')+"px");
 
-      var req = $.get("<%= datum_path(@visualization.datum, format: :json) %>");
+      var req = $.get("<%= visualization_path(@visualization, format: :json) %>");
       $.when(req).done(function(res) {
         data = res;
 
