added some question in faq

--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -8,6 +8,18 @@
 
       <ol class="faq-lists" id="filterableList">
         <li class="faq-items">
+          <h5>Do I need to read all of these to solve my problem?</h5>
+          <p>No. There is a search bar above to filter this faq.</p>
+        </li>
+        <li class="faq-items">
+          <h5>What if I still could not find my problem?</h5>
+          <p>We are sorry. Feel free to submit your inquiries to the <a href="mailto:hudadiaz@gmail.com" target="_blank">admin</a>.</p>
+        </li>
+        <li class="faq-items">
+          <h5>What if I still could not solve my problem?</h5>
+          <p>We are sorry. Feel free to submit your inquiries to the <a href="mailto:hudadiaz@gmail.com" target="_blank">admin</a>.</p>
+        </li>
+        <li class="faq-items">
           <h5>What is Insightful?</h5>
           <p>Insightful is a web application which purpose of existent is too help researchers and anyone with raw data to visualize their data with beautiful charts and graphs.</p>
         </li>
