changes page structure and make labels always color

--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -41,8 +41,12 @@ path {
 
 <div class="bs-docs-section">
   <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Draw#sunburst</h1>
+      </div>
+    </div>
     <div class="col-sm-12">
-      <h1>Draw#sunburst</h1>
   
       <div class="row">
         <div class="col-sm-9">
