--- a/app/views/data/draw/normalized_stacked_bar.html.erb
+++ b/app/views/data/draw/normalized_stacked_bar.html.erb
@@ -27,8 +27,12 @@
 
 <div class="bs-docs-section">
   <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Draw#normalized_stacked_bar</h1>
+      </div>
+    </div>
     <div class="col-sm-12">
-      <h1>Draw#normalized_stacked_bar</h1>
   
       <div class="row">
         <div class="col-sm-4">
