--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -46,8 +46,12 @@
 
 <div class="bs-docs-section">
   <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Draw#sankey</h1>
+      </div>
+    </div>
     <div class="col-sm-12">
-      <h1>Draw#sankey</h1>
   
       <div class="row">
         <div class="col-sm-9">
