--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -3,8 +3,11 @@
 <div class="bs-docs-section">
   <div class="row">
     <div class="col-md-12">
-      <h2><%= @datum.name %>&nbsp;&nbsp;<%= link_to '<i class="material-icons">edit</i>'.html_safe, edit_datum_path(@datum) %></h2>
-
+      <div class="page-header">
+        <h1 id="forms"><%= @datum.name %>&nbsp;&nbsp;<%= link_to '<i class="material-icons">edit</i>'.html_safe, edit_datum_path(@datum) %></h1>
+      </div>
+    </div>
+    <div class="col-md-12">
       <h3>Create visualizations</h3>
 
       <div class="row">
