--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <h2>Change your password</h2>
+    <div class="page-header">
+      h2>Change your password</h2>
+    </div>
+  </div>
+  <div class="col-md-4 col-md-offset-4">
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
