--- a/app/views/data/edit.html.erb
+++ b/app/views/data/edit.html.erb
@@ -24,20 +24,21 @@
             </div>
           <% end %>
         
-          <div class="form-group label-static is-empty">
+          <div class="form-group label-floating">
             <%= f.label :name, 'Data name', class: "control-label" %>
             <%= f.text_field :name, class: "form-control", placeholder: 'Data name' %>
             <p class="help-block">Give a name or short description for the data so you do not have to wonder what it contains later.</p>
           </div>
         
-          <div class="form-group is-empty is-fileinput">
+          <div class="form-group is-fileinput">
             <%= f.label :file, 'Upload new CSV file to update existing data', class: "control-label" %>
             <%= f.file_field :file, accept: ".csv" %>
             <input type="text" readonly="" class="form-control" placeholder="Upload new CSV file">
           </div>
         
-          <div class="form-group label-floating is-empty">
-            <%= f.text_area :content, class: "form-control", rows: 6, placeholder: "You can also paste your new CSV here" %>
+          <div class="form-group label-floating">
+            <%= f.label :content, 'You can also paste your new CSV here', class: "control-label" %>
+            <%= f.text_area :content, class: "form-control", rows: 6 %>
             <p class="help-block">Leave this empty if you are uploading a <code>file</code> or do not want to update your data.</p>
           </div>
         
