--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -11,7 +11,7 @@
       <%= f.hidden_field :reset_password_token %>
 
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :password, class: "control-label" %>
         <%= f.password_field :password, autocomplete: :off, class: "form-control" %>
         <% if @minimum_password_length %>
@@ -21,7 +21,7 @@
         <span class="material-input"></span>
       </div>
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :password_confirmation, class: "control-label" %>
         <%= f.password_field :password_confirmation, autocomplete: :off, class: "form-control" %>
         <span class="material-input"></span>
