--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :email, class: "control-label" %>
         <%= f.email_field :email, autofocus: false, autocomplete: :off, class: "form-control active" %>
         <span class="material-input"></span>
@@ -15,7 +15,7 @@
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :password, class: "control-label" %>
         <%= f.password_field :password, autocomplete: :off, class: "form-control" %>
         <p class="help-block">leave blank if you don't want to change it</p>
@@ -23,7 +23,7 @@
       </div>
 
       
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :password_confirmation, class: "control-label" %>
         <%= f.password_field :password_confirmation, autocomplete: :off, class: "form-control" %>
         <p class="help-block">leave blank if you don't want to change it</p>
@@ -31,7 +31,7 @@
       </div>
 
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating">
         <%= f.label :current_password, class: "control-label" %>
         <%= f.password_field :current_password, autocomplete: :off, class: "form-control" %>
         <p class="help-block">we need your current password to confirm your changes</p>
