--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group label-placeholder is-empty">
+      <div class="form-group label-floating is-empty">
         <%= f.label :email, class: "control-label" %>
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
         <span class="material-input"></span>
