--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -3,7 +3,8 @@
     <div class="col-lg-7 col-md-9">
       <h1>Frequently Asked Question</h1>
 
-      <div class="form-group is-empty" id="filterInputHolder">
+      <div class="form-group label-floating is-empty" id="filterInputHolder">
+        <label class="control-label">Search</label>
       </div>
 
       <ol class="faq-lists" id="filterableList">
