--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -19,13 +19,13 @@
           </div>
         <% end %>
 
-        <div class="form-group label-static is-empty">
+        <div class="form-group label-floating">
           <%= f.label :title, class: "control-label" %>
           <%= f.text_field :title, class: "form-control" %>
           <p class="help-block">Give this <%= @visualization.type.humanize.downcase %> a title.</p>
         </div>
 
-        <div class="form-group label-static is-empty">
+        <div class="form-group label-floating">
           <%= f.label :caption, class: "control-label" %>
           <%= f.text_field :caption, class: "form-control" %>
           <p class="help-block">Write a short description so people know what this <%= @visualization.type.humanize.downcase %> means.</p>
