--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,11 +36,11 @@ $nprogress-color: #fff;
 }
 
 .visualization-container {
-    width: 100%;
-    height: 100%;
-    padding: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 #chart {
@@ -77,5 +77,9 @@ li.faq-items {
 }
 
 label {
-    color: #009688 !Important;
+  color: #009688 !Important;
+}
+
+.page-header {
+  margin: 0;
 }
