--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -1,7 +1,11 @@
 <div class="bs-docs-section ">
   <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Editing Visualization</h1>
+      </div>
+    </div>
     <div class="col-sm-12">
-      <h1>Editing Visualization</h1>
       
       <%= form_for(@visualization) do |f| %>
         <% if @visualization.errors.any? %>
