--- a/app/views/visualizations/index.html.erb
+++ b/app/views/visualizations/index.html.erb
@@ -1,7 +1,11 @@
 <div class="bs-docs-section">
   <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <h1>Listing Visualizations</h1>
+      </div>
+    </div>
     <div class="col-sm-12">
-      <h1>Listing Visualizations</h1>
       
       <div class="table-wrapper">
         <table class="table table-striped">
