--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -4,9 +4,9 @@
   <title>Insightful</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
   <%= stylesheet_link_tag    'mfb/mfb.min.css' %>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag    'draw/include.css', media: 'all' %>
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'draw/include.js' %>
   <%= javascript_include_tag 'draw/'+@visualization.type.dasherize %>
   <%= javascript_include_tag 'mfb/mfb.min.js' %>
   <%= csrf_meta_tags %>
