added question drawing bar chart to faq

--- a/app/views/faq/index.html.erb
+++ b/app/views/faq/index.html.erb
@@ -69,6 +69,10 @@
           <p>In the draw stacked bar and normalized stacked bar, there are 3 selects inputs. The first select determines the x-axis, the second select determines the grouping and the last determines values measured. The x-axis is limited to the highest 80 items. It is advised that the number of unique values of the second argument to be not more than 9.</p>
         </li>
         <li class="faq-items">
+          <h5>How to draw normal bar chart?</h5>
+          <p>Stacked bars can draw usual bar chart. To do this, simply select the same column for the first 2 select inputs.</p>
+        </li>
+        <li class="faq-items">
           <h5>How to save visualization?</h5>
           <p>When you are ready to share your visualization, click on the save button. You will be taken to a form where you can edit the title and caption of the visualization after the visualization is saved. Click <code>Update Visualization</code> when you are done.</p>
         </li>
