changed placeholders of selects and moved select in data edit to top

--- a/app/views/data/draw/sankey.html.erb
+++ b/app/views/data/draw/sankey.html.erb
@@ -57,7 +57,7 @@
         <div class="col-sm-9">
           <div class="form-group">
             <label for="select-main">Select variables you want to see the relationships between them</label>
-            <select id="select-main" class="form-control">
+            <select id="select-main" class="form-control" placeholder="Select here">
               <option disabled selected> loading... </option>
             </select>
           </div>
