--- a/app/views/data/draw/stacked_bar.html.erb
+++ b/app/views/data/draw/stacked_bar.html.erb
@@ -30,7 +30,7 @@
         <div class="col-sm-4">
           <div class="form-group">
             <label for="select-category">Select variable you want to compare</label>
-            <select id="select-category" class="form-control">
+            <select id="select-category" class="form-control" placeholder="Select one">
               <option disabled selected> loading... </option>
             </select>
           </div>
@@ -38,7 +38,7 @@
         <div class="col-sm-4">
           <div class="form-group">
             <label for="select-stack">Select variable to compare them on</label>
-            <select id="select-stack" class="form-control">
+            <select id="select-stack" class="form-control" placeholder="Select one">
               <option disabled selected> loading... </option>
             </select>
           </div>
