--- a/app/views/data/draw/sunburst.html.erb
+++ b/app/views/data/draw/sunburst.html.erb
@@ -52,7 +52,7 @@ path {
         <div class="col-sm-9">
           <div class="form-group">
             <label for="select-main">Select variables you want to compare</label>
-            <select id="select-main" class="form-control">
+            <select id="select-main" class="form-control" placeholder="Select here">
               <option disabled selected> loading... </option>
             </select>
           </div>
