--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,9 +43,14 @@
         <%= f.submit "Update", class: "btn btn-primary btn-raised waves-effect" %>
       </div>
     <% end %>
-
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6">
     <h3>Cancel my account</h3>
 
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "You are about to cancel your account. Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+    <p>Unhappy? You can permenently delete your account from our service.</p>
+
+    <%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "You are about to delete your account, #{current_user.email}. Are you sure?" }, method: :delete, class: 'btn btn-raised btn-sm btn-danger waves-effect' %>
   </div>
 </div>
