corrected twitter share

--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -190,7 +190,7 @@
       </a>
       <ul class="mfb-component__list">
         <li>
-          <a onclick="openPopup(this)" data-url="http://twitter.com/home?status=<%= URI.encode(@visualization.title.humanize+': '+@visualization.title.humanize) %>+<%= URI.encode(request.original_url) %>" data-mfb-label="Tweet to Twitter" class="mfb-component__button--child">
+          <a onclick="openPopup(this)" data-url="http://twitter.com/home?status=<%= URI.encode(@visualization.title.humanize) %>+<%= URI.encode(request.original_url) %>" data-mfb-label="Tweet to Twitter" class="mfb-component__button--child">
             <i class="mfb-component__child-icon ion-social-twitter"></i>
           </a>
         </li>
